--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "loader-utils": "^0.2.13",
+    "postcss-easy-import": "^1.0.1",
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
