--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "loader-utils": "^0.2.13",
+    "mkpath": "^1.0.0",
     "postcss-easy-import": "^1.0.1",
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.13.1",
