--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.3.0",
   "author": "Eugene Zhlobo @ezhlobo",
   "main": "./index.js",
-  "bin": "./bin/cli.js",
   "dependencies": {
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
@@ -16,7 +15,6 @@
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "yamljs": "^0.2.7"
+    "webpack": "^1.12.14"
   }
 }
